Table users {
  id int [pk, increment]
  userId varchar [unique]
  displayName varchar [not null]
  pictureUrl varchar [not null]
  statusMessage varchar
  language varchar
  active boolean 
  created_at timestamp
  updated_at timestamp
}

Table crowds {
  id int [pk, increment]
  crowdId varchar [unique]
  type crowd_type
  groupName varchar
  pictureUrl varchar
  active boolean 
  created_at timestamp
  updated_at timestamp
}

Enum crowd_type {
  group
  room
}

Table join_map {
  userId varchar [ref: - users.userId]
  crowdId varchar [ref: - crowds.crowdId]
  
  Indexes {
    (userId, crowdId) [unique]
  }
}

Table share_event {
  id int [pk, increment]
  crowdId varchar [ref: > crowds.crowdId]
  price int
  splitType split_type
  status varchar
  remark varchar
  created_at timestamp
  updated_at timestamp
}

Enum split_type {
  AVG
  EXTRA
  PERCENT
  WEIGHTS
  SINGLE
}

Enum user_type {
  PAYER
  DEBTOR
}

Table participants {
  id int [pk, increment]
  userId varchar [ref: - users.userId]
  value int
  type user_type
  share_event_id int [ref: > share_event.id]

  created_at timestamp
  updated_at timestamp
  
  Indexes {
    (share_event_id, userId, type) [unique]
  }
}
